--- a/src/styledelements.css
+++ b/src/styledelements.css
@@ -21,6 +21,7 @@ body{
     text-align: -webkit-center;
     font-family: sans-serif;
     padding: 50px 0px;
+    padding-left: calc(100vw - 100%)
 }
 
 .container{
@@ -134,14 +135,17 @@ input.enterAddField:focus {
 }
 
 .todo-edit-container{
-    display: flex;
-    grid-template-columns: 0px 300px 60px 0px;
+    display: grid;
+    /* grid-template-columns: 0px 300px 60px 0px; */
+    grid-template-columns: 300px 60px 0px;
     grid-gap: 27px;
     padding-top: 30px;
     padding-bottom: 40px;
+    padding-left: 66px;
     height: 50px;
     font-size: larger;
     align-content: center;
     align-items: center;
-    justify-items: start
+    justify-items: start;
+    
 }
