--- a/src/styledelements.css
+++ b/src/styledelements.css
@@ -5,7 +5,8 @@
 body{
     width:100%;
     height:100vh;
-    background-color: azure;
+    background-color: cadetblue;
+    /*background-color: azure; */
 }
 
 *{
@@ -42,7 +43,7 @@ body{
     grid-template-columns: 440px;
     text-align: -webkit-center;
     font-family: sans-serif;
-    padding: 50px 50px;
+    padding: 25px 25px;
     justify-content: center;
         
    
@@ -60,7 +61,7 @@ body{
     align-items: center;
     */
     display: grid;
-    grid-template-columns: 0px 300px 60px 0px;
+    grid-template-columns: 0px 300px 40px 40px;
     grid-gap: 27px;
     padding-top: 30px;
     padding-bottom: 40px;
@@ -69,6 +70,7 @@ body{
     align-content: center;
     align-items: center;
     justify-items: start;
+    justify-content: center;
 }
 
 .todo-form{
@@ -134,10 +136,15 @@ input.enterAddField:focus {
     outline-width: 0;
 }
 
+.todo-add-container{
+    gap: 20px;
+    width: 100%;
+}
+
 .todo-edit-container{
     display: grid;
     /* grid-template-columns: 0px 300px 60px 0px; */
-    grid-template-columns: 300px 60px 0px;
+    grid-template-columns: 300px 40px 40px;
     grid-gap: 27px;
     padding-top: 30px;
     padding-bottom: 40px;
@@ -147,5 +154,42 @@ input.enterAddField:focus {
     align-content: center;
     align-items: center;
     justify-items: start;
+    justify-content:center;
+
+    background-color: mintcream;
+    border: black;
+    border-style: solid;
+    border-width: thin;
+    border-radius: 5px;
+    width:100%;
     
+}
+
+.todoHolder{
+    
+    background-color: mintcream;
+    border: black;
+    border-style: solid;
+    border-width: thin;
+    border-radius: 5px;
+
+}
+
+.todo-items-container{
+    margin: 0 -50px;
+}
+
+.todo-items-container{
+    display: flex;
+    margin: 0 -50px;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    gap: 5px;
+}
+
+.enterAddField{
+    width: 50%;
+    height: 25px;
 }
