--- a/src/styledelements.css
+++ b/src/styledelements.css
@@ -201,13 +201,37 @@ body{
     grid-template-columns: 0px 300px 40px 40px;
     grid-gap: 27px;
     padding-top: 30px;
-    padding-bottom: 40px;
+    padding-bottom: 10px;
     height: 50px;
     font-size: larger;
     align-content: center;
     align-items: center;
     justify-items: start;
     justify-content: center;
+}
+
+.todoItems-sub{
+  /*
+  display: flex;
+  grid-gap: 20px;
+  padding-top: 30px;
+  padding-bottom: 40px;
+  height: 50px;
+  font-size: larger;
+  align-content: center;
+  align-items: center;
+  */
+  display: grid;
+  grid-template-columns: 20px 280px 40px 40px;
+  grid-gap: 27px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  height: 50px;
+  font-size: larger;
+  align-content: center;
+  align-items: center;
+  justify-items: start;
+  justify-content: center;
 }
 
 .todo-form{
