--- a/src/styledelements.css
+++ b/src/styledelements.css
@@ -272,6 +272,7 @@ button[type=submit]{
     border:none;
     background: none;
     font-size: 18px;
+    padding-left: 50px;
 
 }
 
@@ -293,24 +294,20 @@ input.enterAddField:focus {
 
 .todo-edit-container{
     display: grid;
-    /* grid-template-columns: 0px 300px 60px 0px; */
-    grid-template-columns: 300px 50px 50px;
-    grid-gap: 25px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 80px;
-    height: 50px;
-    align-content: center;
-    align-items: center;
-    justify-items: start;
-    justify-content:center;
+    grid-template-columns: 375px 55px 20px;
+    gap: 15px;
     font-size: larger;
     background-color: mintcream;
     border: black;
     border-style: solid;
     border-width: thin;
     border-radius: 5px;
-    width:100%;
+    width: 100%;
+    padding: 20px;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+    justify-items: start;
     
 }
 
