--- a/src/styledelements.css
+++ b/src/styledelements.css
@@ -283,7 +283,7 @@ input.enterField:focus {
 .todo-add-container{
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 520px;
 }
 
 input.enterAddField:focus {
