--- a/src/styledelements.css
+++ b/src/styledelements.css
@@ -34,7 +34,8 @@ svg:hover{
     display: flex;
     gap: 10px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+
 
 }
 
@@ -143,11 +144,13 @@ svg:hover{
   }
   .react-calendar__tile--now {
     /* background: #ffff76; */
-    background-color: black
+    background-color: black;
+    color: white;
   }
   .react-calendar__tile--now:enabled:hover,
   .react-calendar__tile--now:enabled:focus {
-    background: #ffffa9;
+    background: #e6e6e6;
+    color: black;
   }
   .react-calendar__tile--hasActive {
     background: #76baff;
@@ -157,8 +160,8 @@ svg:hover{
     background: #a9d4ff;
   }
   .react-calendar__tile--active {
-    background: black;
-    color: white;
+    background: white;
+    color: black;
   }
   .react-calendar__tile--active:enabled:hover,
   .react-calendar__tile--active:enabled:focus {
